[gd_scene load_steps=5 format=3 uid="uid://brc2xcb14jdfm"]

[ext_resource type="Script" path="res://Menu/MainMenu.gd" id="1_0u6jl"]
[ext_resource type="Texture2D" uid="uid://dd31f3y667ken" path="res://Menu/bgmenu.png" id="2_0foyq"]
[ext_resource type="Texture2D" uid="uid://7jlg0m4gfd2n" path="res://Menu/logo.png" id="3_f5mve"]
[ext_resource type="AudioStream" uid="uid://df35wnnky75wk" path="res://sound/menu.wav" id="4_mx0oy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0u6jl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
texture_filter = 1
offset_left = -1.0
offset_right = 799.0
offset_bottom = 600.0
texture = ExtResource("2_0foyq")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 81.0
offset_right = 312.0
offset_bottom = 218.0
grow_horizontal = 2
texture = ExtResource("3_f5mve")

[node name="Start" type="Button" parent="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 19.5
offset_right = 95.0
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Scoreboard" type="Button" parent="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 110.5
offset_right = 87.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2
text = "Scoreboard"

[node name="Profile" type="Button" parent="NinePatchRect"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -92.0
offset_right = 85.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Profile"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mx0oy")
autoplay = true

[connection signal="pressed" from="NinePatchRect/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="NinePatchRect/Scoreboard" to="." method="_on_scoreboard_pressed"]
[connection signal="pressed" from="NinePatchRect/Profile" to="." method="_on_profile_pressed"]
